# on-call-agent

./: .gitignore  README.md  pyproject.toml
notes/: note_july_14.txt  notes.md
src/: environment.py  log_entry.py  log_simulator.py  main.py  prompts.py  rubric.py  service_topology.py  simple_log_templates.py  tools.py  trainer.py  utils.py
src/tests/: main_test.py  test_env.py  test_grpo_training.py  test_tools.py
src/tests/qwen_tests/: main.py  main2.py
src/thanks_will/: Dockerfile  build_and_run.sh  create_dataset.py  main.py  obs_env.py  print_dataset.py  rub.py
src/thanks_will/configs/: zero3.yaml
