[project]
name = "on-call-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "datasets>=2.12.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "wandb>=0.15.0",
    "psutil>=5.9.0",
]
